--- a/ui/main_window.ui
+++ b/ui/main_window.ui
@@ -70,7 +70,7 @@
            <property name="geometry">
             <rect>
              <x>0</x>
-             <y>-11</y>
+             <y>0</y>
              <width>681</width>
              <height>899</height>
             </rect>
@@ -140,6 +140,12 @@
                   <width>0</width>
                   <height>25</height>
                  </size>
+                </property>
+                <property name="tabletTracking">
+                 <bool>false</bool>
+                </property>
+                <property name="focusPolicy">
+                 <enum>Qt::ClickFocus</enum>
                 </property>
                </widget>
               </item>
