--- a/ui/device_manager.ui
+++ b/ui/device_manager.ui
@@ -103,7 +103,7 @@
            <x>0</x>
            <y>0</y>
            <width>758</width>
-           <height>173</height>
+           <height>159</height>
           </rect>
          </property>
          <layout class="QVBoxLayout" name="verticalLayout_4">
@@ -239,7 +239,7 @@
            <x>0</x>
            <y>0</y>
            <width>758</width>
-           <height>172</height>
+           <height>159</height>
           </rect>
          </property>
          <layout class="QVBoxLayout" name="verticalLayout_3">
@@ -403,6 +403,19 @@
       </widget>
      </item>
     </layout>
+   </item>
+   <item>
+    <widget class="QProgressBar" name="loading_bar">
+     <property name="maximum">
+      <number>10000</number>
+     </property>
+     <property name="value">
+      <number>0</number>
+     </property>
+     <property name="textVisible">
+      <bool>false</bool>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
