--- a/ui/main_window.ui
+++ b/ui/main_window.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1046</width>
-    <height>661</height>
+    <width>1363</width>
+    <height>844</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -144,8 +144,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>530</width>
-             <height>1002</height>
+             <width>635</width>
+             <height>1192</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="verticalLayout_14">
@@ -257,6 +257,12 @@
             </item>
             <item>
              <widget class="QWidget" name="main_drive_area" native="true">
+              <property name="maximumSize">
+               <size>
+                <width>755</width>
+                <height>16777215</height>
+               </size>
+              </property>
               <layout class="QVBoxLayout" name="verticalLayout_16">
                <property name="leftMargin">
                 <number>10</number>
@@ -767,6 +773,12 @@
             </item>
             <item>
              <widget class="QWidget" name="filter_wheel_area" native="true">
+              <property name="maximumSize">
+               <size>
+                <width>755</width>
+                <height>16777215</height>
+               </size>
+              </property>
               <layout class="QVBoxLayout" name="verticalLayout_19">
                <property name="leftMargin">
                 <number>10</number>
@@ -945,7 +957,7 @@
                       <rect>
                        <x>0</x>
                        <y>0</y>
-                       <width>487</width>
+                       <width>580</width>
                        <height>148</height>
                       </rect>
                      </property>
@@ -1146,6 +1158,12 @@
             </item>
             <item>
              <widget class="QWidget" name="sample_area" native="true">
+              <property name="maximumSize">
+               <size>
+                <width>755</width>
+                <height>16777215</height>
+               </size>
+              </property>
               <layout class="QVBoxLayout" name="verticalLayout_20">
                <property name="leftMargin">
                 <number>10</number>
@@ -1776,6 +1794,12 @@
             </item>
             <item>
              <widget class="QWidget" name="detector_area" native="true">
+              <property name="maximumSize">
+               <size>
+                <width>755</width>
+                <height>16777215</height>
+               </size>
+              </property>
               <layout class="QVBoxLayout" name="verticalLayout_21">
                <property name="leftMargin">
                 <number>10</number>
@@ -2608,8 +2632,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1046</width>
-     <height>18</height>
+     <width>1363</width>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
