--- a/ui/machine_config.ui
+++ b/ui/machine_config.ui
@@ -99,14 +99,44 @@
          <property name="bottomMargin">
           <number>5</number>
          </property>
-         <item row="2" column="0">
+         <item row="1" column="0">
+          <layout class="QHBoxLayout" name="horizontalLayout" stretch="0">
+           <property name="leftMargin">
+            <number>20</number>
+           </property>
+           <property name="topMargin">
+            <number>0</number>
+           </property>
+           <item>
+            <widget class="QCheckBox" name="override_steps_per_nm">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="text">
+              <string>Override Steps per Nanometer</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+         <item row="3" column="0">
           <widget class="QLabel" name="label_15">
            <property name="text">
             <string>Minimum Allowed Position</string>
            </property>
           </widget>
          </item>
-         <item row="1" column="2">
+         <item row="2" column="0">
+          <widget class="QLabel" name="label_13">
+           <property name="text">
+            <string>Maximum Allowed Position</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="2">
           <widget class="QLabel" name="label_14">
            <property name="text">
             <string>nm</string>
@@ -120,14 +150,14 @@
            </property>
           </widget>
          </item>
-         <item row="1" column="0">
-          <widget class="QLabel" name="label_13">
+         <item row="0" column="2">
+          <widget class="QLabel" name="label_38">
            <property name="text">
-            <string>Maximum Allowed Position</string>
+            <string>steps/nm</string>
            </property>
           </widget>
          </item>
-         <item row="1" column="1">
+         <item row="2" column="1">
           <widget class="QDoubleSpinBox" name="max_pos_sbox">
            <property name="minimum">
             <double>-9999.000000000000000</double>
@@ -140,14 +170,14 @@
            </property>
           </widget>
          </item>
-         <item row="0" column="2">
-          <widget class="QLabel" name="label_38">
+         <item row="3" column="2">
+          <widget class="QLabel" name="label_16">
            <property name="text">
-            <string>steps/nm</string>
+            <string>nm</string>
            </property>
           </widget>
          </item>
-         <item row="2" column="1">
+         <item row="3" column="1">
           <widget class="QDoubleSpinBox" name="min_pos_sbox">
            <property name="minimum">
             <double>-9999.000000000000000</double>
@@ -160,19 +190,55 @@
            </property>
           </widget>
          </item>
-         <item row="2" column="2">
-          <widget class="QLabel" name="label_16">
-           <property name="text">
-            <string>nm</string>
-           </property>
-          </widget>
-         </item>
          <item row="0" column="1">
           <widget class="QLabel" name="steps_per_nm">
            <property name="text">
             <string>NOT CALCULATED</string>
            </property>
           </widget>
+         </item>
+         <item row="1" column="2">
+          <widget class="QLabel" name="label_46">
+           <property name="text">
+            <string>steps/nm</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="1">
+          <layout class="QHBoxLayout" name="horizontalLayout_9">
+           <property name="leftMargin">
+            <number>0</number>
+           </property>
+           <property name="topMargin">
+            <number>0</number>
+           </property>
+           <property name="rightMargin">
+            <number>0</number>
+           </property>
+           <property name="bottomMargin">
+            <number>0</number>
+           </property>
+           <item>
+            <widget class="QDoubleSpinBox" name="steps_per_nm_override">
+             <property name="decimals">
+              <number>4</number>
+             </property>
+             <property name="minimum">
+              <double>1.000000000000000</double>
+             </property>
+             <property name="maximum">
+              <double>9999999.000000000000000</double>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="enact_override">
+             <property name="text">
+              <string>Enact Override</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
          </item>
         </layout>
        </item>
@@ -349,13 +415,10 @@
          <property name="bottomMargin">
           <number>5</number>
          </property>
-         <item row="0" column="1">
-          <widget class="QDoubleSpinBox" name="fw_steps_per_deg">
-           <property name="minimum">
-            <double>1.000000000000000</double>
-           </property>
-           <property name="maximum">
-            <double>9999999.000000000000000</double>
+         <item row="2" column="2">
+          <widget class="QLabel" name="label_45">
+           <property name="text">
+            <string>deg</string>
            </property>
           </widget>
          </item>
@@ -363,6 +426,16 @@
           <widget class="QLabel" name="label_41">
            <property name="text">
             <string/>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="1">
+          <widget class="QDoubleSpinBox" name="fw_steps_per_deg">
+           <property name="minimum">
+            <double>1.000000000000000</double>
+           </property>
+           <property name="maximum">
+            <double>9999999.000000000000000</double>
            </property>
           </widget>
          </item>
@@ -414,8 +487,25 @@
            </property>
           </widget>
          </item>
-         <item row="2" column="2">
-          <widget class="QLabel" name="label_45">
+         <item row="3" column="0">
+          <widget class="QLabel" name="label_4">
+           <property name="text">
+            <string>Offset</string>
+           </property>
+          </widget>
+         </item>
+         <item row="3" column="1">
+          <widget class="QDoubleSpinBox" name="fw_offset">
+           <property name="minimum">
+            <double>-360.000000000000000</double>
+           </property>
+           <property name="maximum">
+            <double>360.000000000000000</double>
+           </property>
+          </widget>
+         </item>
+         <item row="3" column="2">
+          <widget class="QLabel" name="label_5">
            <property name="text">
             <string>deg</string>
            </property>
@@ -554,14 +644,21 @@
          <property name="bottomMargin">
           <number>5</number>
          </property>
-         <item row="4" column="0">
+         <item row="2" column="0">
+          <widget class="QLabel" name="label_26">
+           <property name="text">
+            <string>Minimum Allowed Rotation</string>
+           </property>
+          </widget>
+         </item>
+         <item row="5" column="0">
           <widget class="QLabel" name="label_23">
            <property name="text">
             <string>Steps per Millimeter Translation</string>
            </property>
           </widget>
          </item>
-         <item row="5" column="0">
+         <item row="6" column="0">
           <widget class="QLabel" name="label_27">
            <property name="text">
             <string>Maximum Allowed Position</string>
@@ -575,34 +672,6 @@
            </property>
           </widget>
          </item>
-         <item row="2" column="0">
-          <widget class="QLabel" name="label_26">
-           <property name="text">
-            <string>Minimum Allowed Rotation</string>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="0">
-          <widget class="QLabel" name="label_25">
-           <property name="text">
-            <string>Maximum Allowed Rotation</string>
-           </property>
-          </widget>
-         </item>
-         <item row="6" column="0">
-          <widget class="QLabel" name="label_28">
-           <property name="text">
-            <string>Minimum Allowed Position</string>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="2">
-          <widget class="QLabel" name="label_29">
-           <property name="text">
-            <string>deg</string>
-           </property>
-          </widget>
-         </item>
          <item row="1" column="1">
           <widget class="QDoubleSpinBox" name="smr_max">
            <property name="minimum">
@@ -613,10 +682,24 @@
            </property>
           </widget>
          </item>
-         <item row="6" column="2">
-          <widget class="QLabel" name="label_32">
+         <item row="7" column="0">
+          <widget class="QLabel" name="label_28">
            <property name="text">
-            <string>mm</string>
+            <string>Minimum Allowed Position</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="0">
+          <widget class="QLabel" name="label_25">
+           <property name="text">
+            <string>Maximum Allowed Rotation</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="2">
+          <widget class="QLabel" name="label_29">
+           <property name="text">
+            <string>deg</string>
            </property>
           </widget>
          </item>
@@ -627,14 +710,21 @@
            </property>
           </widget>
          </item>
-         <item row="5" column="2">
+         <item row="7" column="2">
+          <widget class="QLabel" name="label_32">
+           <property name="text">
+            <string>mm</string>
+           </property>
+          </widget>
+         </item>
+         <item row="6" column="2">
           <widget class="QLabel" name="label_31">
            <property name="text">
             <string>mm</string>
            </property>
           </widget>
          </item>
-         <item row="5" column="1">
+         <item row="6" column="1">
           <widget class="QDoubleSpinBox" name="smt_max">
            <property name="minimum">
             <double>-360.000000000000000</double>
@@ -654,20 +744,33 @@
            </property>
           </widget>
          </item>
-         <item row="6" column="1">
-          <widget class="QDoubleSpinBox" name="smt_min">
+         <item row="5" column="1">
+          <widget class="QDoubleSpinBox" name="smt_steps_per_deg">
            <property name="minimum">
             <double>-360.000000000000000</double>
            </property>
            <property name="maximum">
             <double>360.000000000000000</double>
            </property>
+           <property name="value">
+            <double>1.000000000000000</double>
+           </property>
           </widget>
          </item>
-         <item row="3" column="0" colspan="3">
+         <item row="4" column="0" colspan="3">
           <widget class="Line" name="line_5">
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
+           </property>
+          </widget>
+         </item>
+         <item row="7" column="1">
+          <widget class="QDoubleSpinBox" name="smt_min">
+           <property name="minimum">
+            <double>-360.000000000000000</double>
+           </property>
+           <property name="maximum">
+            <double>360.000000000000000</double>
            </property>
           </widget>
          </item>
@@ -681,16 +784,54 @@
            </property>
           </widget>
          </item>
-         <item row="4" column="1">
-          <widget class="QDoubleSpinBox" name="smt_steps_per_deg">
+         <item row="3" column="0">
+          <widget class="QLabel" name="label_8">
+           <property name="text">
+            <string>Offset</string>
+           </property>
+          </widget>
+         </item>
+         <item row="8" column="0">
+          <widget class="QLabel" name="label_9">
+           <property name="text">
+            <string>Offset</string>
+           </property>
+          </widget>
+         </item>
+         <item row="3" column="2">
+          <widget class="QLabel" name="label_10">
+           <property name="text">
+            <string>deg</string>
+           </property>
+          </widget>
+         </item>
+         <item row="8" column="2">
+          <widget class="QLabel" name="label_11">
+           <property name="text">
+            <string>mm</string>
+           </property>
+          </widget>
+         </item>
+         <item row="3" column="1">
+          <widget class="QDoubleSpinBox" name="sr_offset">
            <property name="minimum">
             <double>-360.000000000000000</double>
            </property>
            <property name="maximum">
             <double>360.000000000000000</double>
            </property>
-           <property name="value">
-            <double>1.000000000000000</double>
+          </widget>
+         </item>
+         <item row="8" column="1">
+          <widget class="QDoubleSpinBox" name="st_offset">
+           <property name="decimals">
+            <number>4</number>
+           </property>
+           <property name="minimum">
+            <double>-100000.000000000000000</double>
+           </property>
+           <property name="maximum">
+            <double>100000.000000000000000</double>
            </property>
           </widget>
          </item>
@@ -775,6 +916,13 @@
          <property name="bottomMargin">
           <number>5</number>
          </property>
+         <item row="2" column="0">
+          <widget class="QLabel" name="label_34">
+           <property name="text">
+            <string>Minimum Allowed Rotation</string>
+           </property>
+          </widget>
+         </item>
          <item row="0" column="0">
           <widget class="QLabel" name="label_24">
            <property name="text">
@@ -796,13 +944,6 @@
            </property>
            <property name="maximum">
             <double>360.000000000000000</double>
-           </property>
-          </widget>
-         </item>
-         <item row="2" column="0">
-          <widget class="QLabel" name="label_34">
-           <property name="text">
-            <string>Minimum Allowed Rotation</string>
            </property>
           </widget>
          </item>
@@ -837,6 +978,30 @@
            </property>
            <property name="maximum">
             <double>999999999.000000000000000</double>
+           </property>
+          </widget>
+         </item>
+         <item row="3" column="0">
+          <widget class="QLabel" name="label_12">
+           <property name="text">
+            <string>Offset</string>
+           </property>
+          </widget>
+         </item>
+         <item row="3" column="2">
+          <widget class="QLabel" name="label_39">
+           <property name="text">
+            <string>deg</string>
+           </property>
+          </widget>
+         </item>
+         <item row="3" column="1">
+          <widget class="QDoubleSpinBox" name="dr_offset">
+           <property name="minimum">
+            <double>-360.000000000000000</double>
+           </property>
+           <property name="maximum">
+            <double>360.000000000000000</double>
            </property>
           </widget>
          </item>
